add feeds, google analytics and disqus

--- a/pages/first.html
+++ b/pages/first.html
@@ -7,6 +7,10 @@
   <title>Основны работы со статичным сайтом блогом | Personal Public Blog </title>
   <meta name="author" content="Ilya Bezrukov">
 
+  <link href="http://dgihangesht.github.io/feeds/atom.xml" type="application/atom+xml" rel="alternate"
+        title="Personal Public Blog Atom Feed" />
+  <link href="http://dgihangesht.github.io/feeds/rss.xml" type="application/rss+xml" rel="alternate"
+        title="Personal Public Blog RSS Feed" />
 
 
   <!-- http://t.co/dKP3o1e -->
@@ -14,12 +18,12 @@
   <meta name="MobileOptimized" content="320">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <link href="/favicon.png" rel="icon">
-  <link href="/theme/css/main.css" media="screen, projection"
+  <link href="http://dgihangesht.github.io/favicon.png" rel="icon">
+  <link href="http://dgihangesht.github.io/theme/css/main.css" media="screen, projection"
         rel="stylesheet" type="text/css">
-  <script src="/theme/js/modernizr-2.0.js"></script>
-  <script src="/theme/js/ender.js"></script>
-  <script src="/theme/js/octopress.js" type="text/javascript"></script>
+  <script src="http://dgihangesht.github.io/theme/js/modernizr-2.0.js"></script>
+  <script src="http://dgihangesht.github.io/theme/js/ender.js"></script>
+  <script src="http://dgihangesht.github.io/theme/js/octopress.js" type="text/javascript"></script>
 
   <link href="//fonts.googleapis.com/css?family=PT+Serif:regular,italic,bold,bolditalic"
         rel="stylesheet" type="text/css">
@@ -29,16 +33,16 @@
 
 <body>
   <header role="banner"><hgroup>
-  <h1><a href="/">Personal Public Blog</a></h1>
+  <h1><a href="http://dgihangesht.github.io/">Personal Public Blog</a></h1>
 </hgroup></header>
   <nav role="navigation"><ul class="subscription" data-subscription="rss">
+  <li><a href="http://dgihangesht.github.io/feeds/atom.xml" rel="subscribe-atom">Atom</a></li>
+  <li><a href="http://dgihangesht.github.io/feeds/rss.xml" rel="subscribe-rss">RSS</a></li>
 </ul>
 
 
 
 <ul class="main-navigation">
-      <li><a href="/pages/first.html">Основны работы со статичным сайтом блогом</a></li>
-      <li><a href="/pages/inna_test.html">Проба пера</a></li>
 </ul></nav>
   <div id="main">
     <div id="content">
@@ -116,7 +120,7 @@ Summary: Некоторая описательная часть поста
 </pre></div>
 
 
-<p><img alt="Alt Text" src="/images/darksidemoon.jpeg" /></p>
+<p><img alt="Alt Text" src="http://dgihangesht.github.io/images/darksidemoon.jpeg" /></p>
 <h3>Генерация html страниц</h3>
 <p>убедившись что находитесь в корневом каталоге проекта и virtualenv активирован,
 для чего можно вызвать недавно созданный alias - Blog, выполняем команду:
@@ -145,17 +149,10 @@ Summary: Некоторая описательная часть поста
     <section>
         <h1>Social</h1>
         <ul>
-            <li><a href="#" target="_blank">You can add links in your config file</a></li>
-            <li><a href="#" target="_blank">Another social link</a></li>
-        </ul>
-    </section>
-    <section>
-        <h1>Blogroll</h1>
-        <ul>
-            <li><a href="http://getpelican.com/" target="_blank">Pelican</a></li>
-            <li><a href="http://python.org/" target="_blank">Python.org</a></li>
-            <li><a href="http://jinja.pocoo.org/" target="_blank">Jinja2</a></li>
-            <li><a href="#" target="_blank">You can modify those links in your config file</a></li>
+            <li><a href="http://dgihangesht.github.io/feeds/rss.xml" type="application/rss+xml" rel="alternate">RSS</a></li>
+            <li><a href="http://dgihangesht.github.io/feeds/atom.xml" type="application/atom+xml" rel="alternate">Atom</a></li>
+            <li><a href="http://github.com/dgihangesht" target="_blank">github</a></li>
+            <li><a href="http://twitter.com/dgihan" target="_blank">twitter</a></li>
         </ul>
     </section>
 
