--- a/authors.html
+++ b/authors.html
@@ -119,5 +119,13 @@
     ga('create', 'UA-56334533-1');
     ga('send', 'pageview');
 </script>
-</body>
+	<script type="text/javascript">
+	  var disqus_shortname = '3344622';
+	  (function() {
+	    var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+	    dsq.src = "//" + disqus_shortname + '.disqus.com/embed.js';
+	    (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+	   })();
+	</script>
+<noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript></body>
 </html>
