--- a/pages/first.html
+++ b/pages/first.html
@@ -158,7 +158,15 @@ Summary: Некоторая описательная часть поста
 
 </aside>    </div>
   </div>
-  <footer role="contentinfo"><p>
+	<script type="text/javascript">
+	  var disqus_shortname = '3344622';
+	  (function() {
+	    var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+	    dsq.src = "//" + disqus_shortname + '.disqus.com/embed.js';
+	    (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+	   })();
+	</script>
+<noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>  <footer role="contentinfo"><p>
     Copyright &copy;  2014  - Ilya Bezrukov -
   <span class="credit">Powered by <a href="http://getpelican.com">Pelican</a></span>
 </p></footer>
@@ -206,13 +214,5 @@ Summary: Некоторая описательная часть поста
     ga('create', 'UA-56334533-1');
     ga('send', 'pageview');
 </script>
-	<script type="text/javascript">
-	  var disqus_shortname = '3344622';
-	  (function() {
-	    var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
-	    dsq.src = "//" + disqus_shortname + '.disqus.com/embed.js';
-	    (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
-	   })();
-	</script>
-<noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript></body>
+</body>
 </html>
