again enable discue 4

--- a/pages/first.html
+++ b/pages/first.html
@@ -130,6 +130,7 @@ Summary: Некоторая описательная часть поста
 <h3>Вопрос публикации оставим на потом %)</h3>
 <ul>
 <li><a href="inna_test.html">a link relative to current file</a></li>
+<li><a href="http://foo.com/bar.html#disqus_thread">Comment test</a></li>
 </ul>
   </article>
 </div>
